--- a/crates/astria-sequencer-relayer-test/kubernetes/ingress.yml.j2
+++ b/crates/astria-sequencer-relayer-test/kubernetes/ingress.yml.j2
@@ -9,17 +9,24 @@ spec:
   - host: {{namespace}}.localdev.me
     http:
       paths:
-        - pathType: Prefix
-          path: "/sequencer/(.*)"
+        - path: "/sequencer/(.*)"
+          pathType: ImplementationSpecific
           backend:
             service:
               name: sequencer-relayer-environment-service
               port:
                 number: 1318
-        - pathType: Prefix
-          path: "/bridge/(.*)"
+        - path: /bridge/(.*)
+          pathType: ImplementationSpecific
           backend:
             service:
               name: sequencer-relayer-environment-service
               port:
-                number: 26659
+                name: bridge-rest
+        - path: /jsonrpc/(.*)
+          pathType: ImplementationSpecific
+          backend:
+            service:
+              name: sequencer-relayer-environment-service
+              port:
+                name: bridge-jsonrpc
